# PoetryAndMakefileExample

./: .venv.info  Makefile  README.md  pyproject.toml
poetry-test-app/: app.py
