[tool.poetry]
name = "poetry-test-app"
version = "0.1.0"
description = "ChatGPT is a lot smarter than BingChat"
authors = ["Anthony Rose <ant18sex@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.12"
pandas = "^2"
altair = "^4"

[tool.poetry.dev-dependencies]
# Add any development dependencies here
